add docs swaggo
